tests/pos/loops/break.ts
function foo():void {
  while (true) {
    break;
  }
}
