tests/neg/simple/fun-03.ts
function baz (): void { }

baz();

assert(false);


